<resources>
    <string name="app_name">running_sdk</string>
    <string name="jvtd_use_location_service">使用定位服务中…</string>

    <!--应用文件保存sd卡文件夹名称-->
    <string name="app_file_dir_name">jvtd/cache</string>
    <!--崩溃日志保存文件夹名称-->`
    <string name="app_crash_dir_name">crash</string>

    <!-- 权限相关字符串 -->
    <string name="jvtd_permission_title">重要提示</string>
    <string name="jvtd_permission_storage_description">本软件需要开启存储权限才可正常使用</string>
    <string name="jvtd_permission_camera_description">本软件需要开启相机权限才可正常使用</string>
    <string name="jvtd_permission_location_description">本软件需要开启定位权限才可正常使用</string>
    <string name="jvtd_permission_phone_description">本软件需要开启打电话权限才可正常使用</string>
    <string name="jvtd_permission_microphone_description">本软件需要开启麦克风权限才可正常使用</string>
    <string name="jvtd_permission_address_book_description">本软件需要开启手机通讯录权限才可正常使用</string>
    <string name="jvtd_permission_description">本软件需要开启相关权限才可正常使用</string>
    <string name="jvtd_permission_to_open_permission">去开启</string>
    <string name="jvtd_permission_to_grant_authorization">去授权</string>
    <string name="jvtd_permission_cancel_grant">取消</string>

    <!--加载更多文字-->
    <string name="jvtd_loading">正在加载中…</string>
    <string name="jvtd_load_failed">加载失败，请点我重试</string>
    <string name="jvtd_load_end">————  别翻啦，木有了～  ————</string>
    <!--空布局文字-->
    <string name="jvtd_empty_loading">正在加载中…</string>
    <string name="jvtd_empty_no_data">暂无数据</string>
    <string name="jvtd_empty_let_me_retry">加载失败，点我重试</string>
    <!--alertdialog文字-->
    <string name="jvtd_alert_dialog_title">提示</string>
    <string name="jvtd_alert_dialog_left_title">取消</string>
    <string name="jvtd_alert_dialog_right_title">确定</string>
    <string name="jvtd_alert_dialog_input_info">请输入内容</string>
    <string name="jvtd_alert_dialog_input_cannot_null">输入内容不能为空</string>

    <!--pickerview文字-->
    <string name="jvtd_picker_view_ok_title">确定</string>
    <string name="jvtd_picker_view_cancel_title">取消</string>
    <string name="jvtd_picker_view_select_time">请选择时间</string>
    <string name="jvtd_picker_view_select_sexs">请选择性别</string>
    <string name="jvtd_picker_view_select_city">请选择城市</string>
    <string name="jvtd_picker_view_year">年</string>
    <string name="jvtd_picker_view_month">月</string>
    <string name="jvtd_picker_view_day">日</string>
    <string name="jvtd_picker_view_hour">时</string>
    <string name="jvtd_picker_view_minute">分</string>
    <string name="jvtd_picker_view_seconds">秒</string>

    <!-- 接口错误信息处理 -->
    <string name="jvtd_api_data_analysis_failed_error">数据解析失败</string>
    <string name="jvtd_api_data_load_failed_error">数据加载失败</string>
    <string name="jvtd_api_network_error">网络异常,请检查您的网络</string>
    <string name="jvtd_api_server_connect_error">服务器连接异常</string>

    <!--webview文字-->
    <string name="jvtd_web_view_host_title">此网页由 %s 提供</string>

    <string name="jvtd_error_toast_error_tips">服务器连接异常</string>

    <!--其他文字-->
    <string name="title_activity_jvtd_main">JvtdMainActivity</string>

</resources>
