<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/jvtd_load_more_height">

    <LinearLayout
        android:id="@+id/load_more_loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleSmall"
            android:layout_marginEnd="@dimen/dp_4"
            android:indeterminateDrawable="@drawable/brvah_sample_footer_loading_progress"
            android:progressTint="@color/jvtd_load_more_color"/>

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:text="@string/jvtd_loading"
            android:textColor="@color/jvtd_load_more_color"
            android:textSize="@dimen/jvtd_load_more_text_size"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/load_more_load_fail_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/jvtd_load_more_color"
            android:textSize="@dimen/jvtd_load_more_text_size"
            android:text="@string/jvtd_load_failed"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/load_more_load_end_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/jvtd_load_end"
            android:textColor="@color/jvtd_load_more_color"
            android:textSize="@dimen/jvtd_load_more_text_size"/>
    </FrameLayout>

</FrameLayout>